# BannerGeneration

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
Artefacts/Config/: config.json
banner_genai/: app.py  blocks.py  callbacks.py  config.py  constants.py  database.py  model.py
banner_genai/utils/: firestore.py  gradio.py  imagen.py  io.py  text.py
generative_banner/: app.py  blocks.py  callbacks.py  config.py  constants.py  database.py  model.py
generative_banner/utils/: firestore.py  gcs.py  imagen.py  io.py  text.py
notebooks/: [MASTER-Colab-Ent]_Notebook_Automated_Banner_Generation.ipynb
scripts/: test-generation.py  test-imagen.py  test-marketing-content-generation.py
src/: [MASTER-Colab-Ent]_Notebook_Automated_Banner_Generation.ipynb
