[project]
name = "generative-banner"
version = "0.1.0"
description = "A Gradio app to demonstrate visual banner generation workflow with Google's text-to-image model."
authors = [
    {name = "Kyle Chung", email = "kyle.chung@quantumblack.com"},
    {name = "Shanky Ram", email = "shankyram@google.com"},
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dynamic = ["dependencies"]
license-files = ["LICENSE"]

[tool.poetry]
package-mode = true

[tool.poetry.dependencies]
google-cloud-aiplatform = "^1.97.0"
google-cloud-firestore = "^2.21.0"
gradio = "^5.34.0"
gradio-image-annotation = "^0.3.0"
numba = "^0.61.2"
onnxruntime = "^1.22.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
